objects/vlocity_cmt__Document__c.object
<CustomObject>
    <description>Represents an online version of a document. A  document can have physical files attached to it such as Word files or PDF files.</description>
    <fields>
        <fullName>vlocity_cmt__DocumentCreationSource__c</fullName>
        <description>Indicates how the document version was created</description>
        <label>Document Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customize</fullName>
                </value>
                <value>
                    <fullName>Generate</fullName>
                    <default>true</default>
                    <label>Generate</label>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentSourceId__c</fullName>
        <externalId>true</externalId>
        <label>Document Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document Template Identifier</description>
        <label>Document Template</label>
        <referenceTo>vlocity_cmt__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocxTemplateName__c</fullName>
        <label>Docx Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SectionCount__c</fullName>
        <label>Section Count</label>
        <summaryForeignKey>vlocity_cmt__DocumentSection__c.vlocity_cmt__DocumentId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>document version status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Contract document type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <description>document version number</description>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WMLMetadata__c</fullName>
        <label>WML Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>